--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,38 @@
+/* SCROLLBAR STYLE */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #2e78ef;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #d6d6d6;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #2e78ef;
+}
+::-webkit-scrollbar-track {
+  background: #c2c2c2;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #c2c2c2;
+}
+::-webkit-scrollbar-track:active {
+  background: #666666;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
 .body-home {
   height: 100vh;
   background: url("../img/homebg.jpg");
@@ -86,12 +121,14 @@
 /*MAIN*/
 
 .main {
+  height: 100vh;
   padding-top: 40px;
+  overflow: auto;
 }
 
 .main .columna {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 /*mediaquerys*/
