--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,6 +38,7 @@
   background: url("../img/homebg.jpg");
   background-size: cover;
   background-position: center center;
+  overflow: hidden;
 }
 
 .body-home .container {
@@ -122,7 +123,8 @@
 
 .main {
   height: 100vh;
-  padding-top: 40px;
+  padding-top: 1rem;
+  padding-bottom: 2.5rem;
   overflow: auto;
 }
 
