preparing js for send pedido

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -141,7 +141,7 @@
 #shop-card {
   position: relative;
 }
-#shop-card .card-footer {
+#shop-card .card-body {
   overflow-y: auto;
 }
 #shop-card .card-footer {
