--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,6 +33,10 @@
   background: transparent;
 }
 
+body {
+  position: relative;
+}
+
 .body-home {
   height: 100vh;
   background: url("../img/homebg.jpg");
@@ -134,7 +138,7 @@
 }
 
 .main [class*="col"] {
-  min-height: 90%;
+  min-height: 95%;
   overflow-y: auto;
 }
 
@@ -153,6 +157,28 @@
   font-weight: 600;
 }
 
+.box-search {
+  position: absolute;
+  top: 20%;
+  right: 25%;
+  width: 50%;
+  height: 30rem;
+
+  z-index: 100;
+}
+
+#client-list {
+  transition: all 0.8s ease;
+}
+#client-list .list-group-item {
+  cursor: pointer;
+  transition: all ease 0.3s;
+}
+
+#client-list .list-group-item:hover {
+  background-color: rgba(13, 39, 156, 0.712);
+  color: #fff;
+}
 /*mediaquerys*/
 
 @media screen and (max-width: 1300px) {
